# tree-sitter-rbs

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  builtin.rbs  go.mod  grammar.js  log.html  package.json  pyproject.toml  setup.py  tree-sitter-rbs.pc  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-rbs.h  tree-sitter-rbs.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rbs/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRbsTests/: TreeSitterRbsTests.swift
queries/: highlights.scm
queries/rbs/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: annotations.txt  decls.txt  directives.txt  inline_types.txt  members.txt  methods.txt  types.txt
test/highlight/: classes.rbs  inline_annotated_type.rbs  inline_doc_style.rbs  inline_ivar.rbs  inline_only_type.rbs  inline_override.rbs  inline_simple.rbs  inline_skip.rbs
