[package]
name = "tree-sitter-rbs"
description = "rbs grammar for the tree-sitter parsing library"
version = "0.2.2"
keywords = ["incremental", "parsing", "rbs"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/joker1007/tree-sitter-rbs"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.25"
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = "1.0"
